--- a/css/style.css
+++ b/css/style.css
@@ -63,3 +63,51 @@ body {
   color: black;
   background: yellow;
 }
+
+.add-menu{
+  min-width: 300px;
+  max-width: 300px;
+  margin: auto;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  z-index: 99999;
+  background: #f5f5f5;
+  border: 1px solid #D0D0D0;
+  border-radius: 5px;
+  padding: 10px;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
+
+.add-menu:hover{
+  box-shadow: 0 16px 22px 0 rgba(0,0,0,0.2);
+}
+
+.add-menu h2{
+  margin: 5%;
+  text-align: center;
+}
+
+.add-button{
+  padding-top: 5px;
+  padding-bottom: 35px;
+  text-align: center;
+}
+
+
+.ngac-bottom-tag h1{
+  font-family: helvetica neue, helvetica, liberation sans, arial, sans-serif;
+  opacity: 0.5;
+  font-size: 1em;
+  font-weight: bold;
+  position: fixed;
+  bottom: 0;
+  left: 27.5%;
+}
+
+.add-relation{
+  min-height: 200px;
+}
