--- a/css/style.css
+++ b/css/style.css
@@ -65,8 +65,6 @@ body {
 }
 
 .add-menu{
-  min-width: 300px;
-  max-width: 300px;
   margin: auto;
   position: absolute;
   left: 50%;
@@ -77,9 +75,13 @@ body {
   background: #f5f5f5;
   border: 1px solid #D0D0D0;
   border-radius: 5px;
-  padding: 10px;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
+}
+
+.add-element, .add-relation{
+  min-width: 300px;
+  padding: 20px;
 }
 
 .add-menu:hover{
@@ -108,6 +110,13 @@ body {
   left: 27.5%;
 }
 
-.add-relation{
-  min-height: 200px;
+#prompt-overlay{
+	display: none;
+	opacity: .2;
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	background: #FFF;
+	width: 100%;
+	z-index: 99999;
 }
