--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,11 @@ body {
 
 #buttons #layout:hover{
   color: black;
+  background: mediumorchid;
+}
+
+#buttons #dbops:hover{
+  color: black;
   background: #0096FF;
 }
 
@@ -156,4 +161,26 @@ body {
 	color: #fff;
 	color: #666;
 	z-index: 99999;
+}
+
+div#Loader {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(73, 73, 73, 0.651);
+  width: 100%;
+  height: 100%;
+  z-index: 999999;
+  display: none;
+}
+
+div#message {
+  width: 50%;
+  height: 100px;
+  margin-top: 25%;
+  margin-left: 25%;
+  background-color: rgb(92, 196, 83);
+  border: 2px solid black;
+  text-align: center;
+  line-height: 100px;
 }
