--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,46 @@ body {
   transition: 0.3s;
 }
 
+.db-button-group{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.db-options{
+  margin: auto;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  z-index: 99999;
+  background: #f5f5f5;
+  border: 1px solid #D0D0D0;
+  border-radius: 5px;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  padding: 20px;
+}
+
+.db-options button{
+  text-align: center;
+  font-size: 25px;
+  padding: 20px;
+}
+
+.db-options h2{
+  margin: 5%;
+  text-align: center;
+}
+
+.db-options i{
+  font-size: 80px;
+}
+
+
 .close-button{
   float: right;
 }
@@ -102,6 +142,10 @@ body {
   box-shadow: 0 16px 22px 0 rgba(0,0,0,0.2);
 }
 
+.db-options:hover{
+  box-shadow: 0 16px 22px 0 rgba(0,0,0,0.2);
+}
+
 .add-menu h2{
   margin: 5%;
   padding-top: 30px;
@@ -112,17 +156,24 @@ body {
   padding-top: 5px;
   padding-bottom: 35px;
   text-align: center;
+  bottom: 0;
 }
 
+.db-options .ngac-bottom-tag{
+  padding-top: 30px;
+}
+
+.ngac-bottom-tag{
+  display: table;
+  margin: 0 auto;
+}
 
 .ngac-bottom-tag h1{
   font-family: helvetica neue, helvetica, liberation sans, arial, sans-serif;
   opacity: 0.5;
   font-size: 1em;
   font-weight: bold;
-  position: fixed;
   bottom: 0;
-  left: 27.5%;
 }
 
 #prompt-overlay{
