--- a/Images+DAG-backup/DAG-version/css/style.css
+++ b/Images+DAG-backup/DAG-version/css/style.css
@@ -132,9 +132,16 @@ body {
 }
 
 .header {
-  padding: 25px;
+  position: absolute;
   text-align: center;
   color: black;
+  z-index: 9999;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  text-align: center;
+  margin-top: 20px;
 }
 
 .header h1{
@@ -142,9 +149,5 @@ body {
   opacity: 0.5;
   font-weight: bold;
   font-size: 30px;
-}
-
-.filetest{
-  position: fixed;
-  z-index: 99999;
+  text-align: center;
 }
